<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

  <EditText
      android:id="@+id/etUsername"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_alignParentTop="true"
      android:layout_alignParentEnd="true"
      android:layout_centerHorizontal="true"
      android:layout_marginStart="111dp"
      android:layout_marginTop="162dp"
      android:layout_marginEnd="90dp"
      android:ems="10"
      android:hint="@string/username"
      android:importantForAutofill="no"
      android:inputType="textPersonName"
      android:minHeight="48dp"
      android:textColorHint="#757575"
      tools:layout_editor_absoluteX="73dp"
      tools:layout_editor_absoluteY="88dp" />

  <EditText
      android:id="@+id/etPassword"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/etUsername"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="82dp"
      android:ems="10"
      android:hint="@string/password"
      android:importantForAutofill="no"
      android:inputType="textPassword"
      android:minHeight="48dp"
      android:textColorHint="#757575" />

  <Button
      android:id="@+id/btLogin"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/etPassword"
      android:layout_alignParentStart="true"
      android:layout_marginStart="209dp"
      android:layout_marginTop="84dp"
      android:text="@string/login" />

  <Button
      android:id="@+id/btSignUp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/etPassword"
      android:layout_alignParentStart="true"
      android:layout_marginStart="72dp"
      android:layout_marginTop="84dp"
      android:text="@string/register" />

</RelativeLayout>