<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".fragments.ComposeFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/evImage"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:contentDescription="@string/captureimage"
        tools:src="@tools:sample/backgrounds/scenic" />

    <EditText
        android:textColor="#000000"
        android:id="@+id/etDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/evImage"
        android:layout_alignParentStart="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="68dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/write_something_for_this_picture"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <Button

        android:id="@+id/btSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etDescription"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="50dp"
        android:text="@string/submit" />

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etDescription"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="122dp"
        android:layout_toStartOf="@+id/btSubmit"
        android:visibility="invisible" />

</RelativeLayout>